demo2/k8s-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-service1
  template:
    metadata:
      labels:
        app: demo-service1
    spec:
      containers:
        - name: demo-service1
          image: shadmanshariar007/demoservice1:2.0
          ports:
            - containerPort: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: demo-service1
spec:
  selector:
    app: demo-service1
  ports:
    - port: 80
      targetPort: 9092
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-service2
  template:
    metadata:
      labels:
        app: demo-service2
    spec:
      containers:
        - name: demo-service2
          image: shadmanshariar007/demoservice2:2.0
          ports:
            - containerPort: 9093

---
apiVersion: v1
kind: Service
metadata:
  name: demo-service2
spec:
  selector:
    app: demo-service2
  ports:
    - port: 80
      targetPort: 9093
  type: ClusterIP
