demo2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: shadmanservices.com
      http:
        paths:
          - path: /course(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-service1
                port:
                  number: 80
          - path: /demo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-service2
                port:
                  number: 80
